# my-own-libuv

./: CMakeLists.txt  Makefile  README.md
examples/helloworld/: main.c
include/: uv.h
include/uv/: errno.h  tree.h  unix.h
src/: async.c  core.c  fs-poll.c  fs.c  getaddrinfo.c  getnameinfo.c  idna.c  inet.c  internal.h  linux.c  loop.c  pipe.c  poll.c  process.c  procfs-exepath.c  proctitle.c  random-devurandom.c  random-getentropy.c  random-getrandom.c  random-sysctl-linux.c  random.c  signal.c  stream.c  strscpy.c  strtok.c  tcp.c  thread-common.c  thread.c  threadpool.c  timer.c  tty.c  udp.c  uv-common.c  uv-common.h
